# allitb

./: .gitignore  README.md  README.org  allitb.cabal  allitb.nix  default.nix  shell.nix
src/: Main.hs
