name:                allitbs
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/githubuser/allitbs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

executable allitb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , HandsomeSoup
                     , bytestring
                     , http-conduit
                     , http-types
                     , hxt
                     , mtl
                     , regex-compat